api-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: api
    app.kubernetes.io/instance: api-1
    app.kubernetes.io/version: 0.0.1
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: kubernetes-practice
    app.kubernetes.io/managed-by: manual
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: api
    spec:
      containers:
      - name: api
        image: mtada/api:0.0.1
        imagePullPolicy: Always
