db-deploy.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/name: db
    app.kubernetes.io/instance: db-1
    app.kubernetes.io/version: 8.0.17
    app.kubernetes.io/component: database
    app.kubernetes.io/part-of: kubernetes-practice
    app.kubernetes.io/managed-by: manual
  name: db
spec:
  serviceName: db-service
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: db
  template:
    metadata:
      labels:
        app.kubernetes.io/name: db
        app.kubernetes.io/instance: db-1
        app.kubernetes.io/version: 8.0.17
        app.kubernetes.io/component: database
        app.kubernetes.io/part-of: kubernetes-practice
        app.kubernetes.io/managed-by: manual
    spec:
      containers:
      - image: mysql:8.0.17
        name: mysql
        ports:
        - containerPort: 3306
        volumeMounts:
          - name: db-pvc
            mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: db-pvc
        labels:
          app.kubernetes.io/name: db
          app.kubernetes.io/instance: db-1
          app.kubernetes.io/version: 8.0.17
          app.kubernetes.io/component: database
          app.kubernetes.io/part-of: kubernetes-practice
          app.kubernetes.io/managed-by: manual
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 500M
