ui-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: ui
    app.kubernetes.io/instance: ui-1
    app.kubernetes.io/version: 0.0.1
    app.kubernetes.io/component: ui
    app.kubernetes.io/part-of: kubernetes-practice
    app.kubernetes.io/managed-by: manual
  name: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ui
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ui
    spec:
      containers:
      - name: ui
        image: mtada/ui:0.0.1
        imagePullPolicy: Always
