api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  labels:
    app.kubernetes.io/name: api-service
    app.kubernetes.io/instance: api-1
    app.kubernetes.io/version: 0.0.1
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: kubernetes-practice
    app.kubernetes.io/managed-by: manual
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: api
  ports:
  - name: "8090"
    port: 8090
    protocol: TCP
    targetPort: 8090

# テスト
# kubectl run --image=centos:7 --restart=Never --rm -i testpod -- curl -s http://api-service:8090/customers/1
