db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  labels:
    app.kubernetes.io/name: db
    app.kubernetes.io/instance: db-1
    app.kubernetes.io/version: 8.0.17
    app.kubernetes.io/component: database
    app.kubernetes.io/part-of: kubernetes-practice
    app.kubernetes.io/managed-by: manual
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app.kubernetes.io/name: db
  ports:
  - name: "3306"
    port: 3306
    protocol: TCP
    targetPort: 3306
